<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.account.NotificationsFragment">

    <ImageView
        android:id="@+id/backButton"
        style="@style/TDBackButton"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/notificationsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/notifications"
        android:textAppearance="@style/TDSubHeading"
        app:layout_constraintStart_toStartOf="@+id/backButton"
        app:layout_constraintTop_toBottomOf="@+id/backButton" />

    <Switch
        android:id="@+id/pushSwitch"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/push_notifications"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/notificationsTitle"
        app:layout_constraintTop_toBottomOf="@+id/notificationsTitle"
        tools:checked="true" />

    <Switch
        android:id="@+id/smsSwitch"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sms_notifications"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/pushSwitch"
        app:layout_constraintStart_toStartOf="@+id/pushSwitch"
        app:layout_constraintTop_toBottomOf="@+id/pushSwitch"
        tools:checked="true" />
</androidx.constraintlayout.widget.ConstraintLayout>