<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/accountTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_account"
        android:textAppearance="@style/TDHeading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logOutButton"
        style="@style/TDButtonBorderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/log_out"
        app:layout_constraintBaseline_toBaselineOf="@+id/accountTitle"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/accountMenuRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/accountTitle"
        app:layout_constraintTop_toBottomOf="@+id/logOutButton" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signInLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:tint="#FFFFFF"
            android:translationZ="45dp"
            app:layout_constraintBottom_toBottomOf="@+id/facebookSignInButton"
            app:layout_constraintStart_toStartOf="@+id/facebookSignInButton"
            app:layout_constraintTop_toTopOf="@+id/facebookSignInButton"
            app:srcCompat="@drawable/ic_facebook_app_logo"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/facebookSignInButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/login_rounded_button"
            android:backgroundTint="#425893"
            android:fontFamily="sans-serif-medium"
            android:gravity="left|center_vertical"
            android:paddingStart="53dp"
            android:text="@string/sign_in_with_facebook"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/googleSignInButton"
            app:layout_constraintEnd_toEndOf="@+id/googleSignInButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/googleSignInButton"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <ImageView
            android:id="@+id/googleIcon"
            android:layout_width="32dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:translationZ="45dp"
            app:layout_constraintBottom_toBottomOf="@+id/googleSignInButton"
            app:layout_constraintStart_toStartOf="@+id/googleSignInButton"
            app:layout_constraintTop_toTopOf="@+id/googleSignInButton"
            app:srcCompat="@drawable/ic_google_g_circle"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/googleSignInButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/login_rounded_button"
            android:backgroundTint="#5383EC"
            android:fontFamily="sans-serif-medium"
            android:gravity="left|center_vertical"
            android:paddingStart="53dp"
            android:text="@string/sign_in_with_google"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:text="@string/sign_in_salespitch"
            app:layout_constraintBottom_toTopOf="@+id/facebookSignInButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>